--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,9 @@
     <modules>
         <module>eureka-server</module>
         <module>eureka-client</module>
+        <module>eureka-client2</module>
         <module>service-ribbon</module>
+        <module>service-fegin</module>
     </modules>
 
     <properties>
