--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <module>eureka-client</module>
         <module>eureka-client2</module>
         <module>service-ribbon</module>
-        <module>service-fegin</module>
+        <module>service-feign</module>
         <module>service-zuul</module>
         <module>config-server</module>
         <module>config-client</module>
@@ -61,6 +61,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.0.3.RELEASE</version>
             </plugin>
         </plugins>
     </build>
