--- a/config-client/src/main/resources/bootstrap.yml
+++ b/config-client/src/main/resources/bootstrap.yml
@@ -1,10 +1,27 @@
+server:
+  port: 8881
 spring:
   application:
     name: config-client
   cloud:
     config:
+      discovery:
+        enabled: true
+        service-id: config-server
       label: master
       profile: dev
-      uri: http://localhost:8888/
-server:
-  port: 8881
+    bus:
+      enabled: true
+      trace:
+        enabled: true
+  rabbitmq:
+    host: 42.192.132.55
+    port: 5672
+    username: guest
+    password: guest
+management:
+  endpoints:
+    web:
+      exposure:
+        include: bus-refresh
+
